--- a/WEB-INF/src/ApplicationResources_en_GB.properties
+++ b/WEB-INF/src/ApplicationResources_en_GB.properties
@@ -2148,3 +2148,7 @@ aliquots.derivedCount = Derivative count
 print.checkboxLabelStorageContainer = Print Labels
 print.printerTypeLabel= Printer Type
 print.printerLocationLabel = Printer Location
+
+#---- Persistent Info. Displayed on home page
+pspl.catissue.support = Persistent's caTissue Support Center
+pspl.catissue.footNote = This version of caTissue is proudly brought to you by <A href="http://www.persistentsys.com">Persistent Systems Ltd</A>. Persistent is a NCI certified caBIG© service provider and co-developer of caTissue along with Washington University, Saint Louis. Visit us at <A HREF="http://www.catissue.com" class="view">www.catissue.com</A> or Call 1-877-CATISSUE (9AM - 5PM ET) for any help.
