Summary Page changes. And some PMD related changes in forms.
SVN-Revision: 17666

--- a/WEB-INF/src/ApplicationResources_en_GB.properties
+++ b/WEB-INF/src/ApplicationResources_en_GB.properties
@@ -2153,3 +2153,23 @@ print.printerLocationLabel = Printer Location
 pspl.catissue.support = Persistent's caTissue Support Center
 pspl.catissue.footNote = This version of caTissue (<a href="Aboutv11p.do">About caTissue Suite v1.1.p2</a>) is brought to you by <A href="http://www.persistentsys.com">Persistent Systems Ltd</A>. Persistent is a NCI certified caBIG© service provider and co-developer of caTissue along with Washington University, Saint Louis. Visit us at <A HREF="http://www.catissue.com" class="view">www.catissue.com</A> or Call 1-877-CATISSUE (9AM - 5PM ET) for any help.
 pspl.catissue.about = About caTissue Suite v1.1.p2
+
+#---- For Summary Page ----
+summary.page.contactInfo = Contact Information
+summary.page.admin = Administrator
+summary.page.contact = Contact #
+summary.page.email = Email address
+summary.page.adminRecords = Administrative Records
+summary.page.tru = Total Registered Users:
+summary.page.tcs = Total Collection Sites:
+summary.page.tcp = Total Collection Protocols:
+summary.page.trps = Total Repository Sites:
+summary.page.tdp = Total Distribution Protocols:
+summary.page.tls = Total Laboratory Sites:
+summary.page.prDetails = Participant Details
+summary.page.trp = Total Registered Participants:
+summary.page.cd = By Clinical Diagnosis
+summary.page.cs = By Clinical Status
+summary.page.spDetails =  Specimens Details
+summary.page.spPathStat = Specimens by Pathological Status
+summary.page.spAnatSite = Specimens by Anatomic Site 
